--- a/src/PlatynUI.Spy/App.axaml
+++ b/src/PlatynUI.Spy/App.axaml
@@ -18,6 +18,16 @@
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Simple.xaml"/> -->
         <!-- <StyleInclude Source="avares://Semi.Avalonia/Themes/Index.axaml" />
         <StyleInclude Source="avares://Semi.Avalonia.DataGrid/Index.axaml" /> -->
-        <sty:FluentAvaloniaTheme PreferSystemTheme="True" PreferUserAccentColor="True" UseSystemFontOnWindows="True" />
+        <sty:FluentAvaloniaTheme PreferSystemTheme="True" PreferUserAccentColor="True"
+            UseSystemFontOnWindows="True" />
+
+        <OnPlatform>
+            <On Options="Linux">
+                <FluentTheme DensityStyle="Compact" />
+            </On>
+            <On Options="Linux">
+                <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+            </On>
+        </OnPlatform>
     </Application.Styles>
 </Application>
