fix(Spy): some correction theming for different platforms

--- a/src/PlatynUI.Spy/App.axaml
+++ b/src/PlatynUI.Spy/App.axaml
@@ -22,6 +22,11 @@
             UseSystemFontOnWindows="True" />
 
         <OnPlatform>
+            <On Options="Windows">
+                <sty:FluentAvaloniaTheme PreferSystemTheme="True" PreferUserAccentColor="True"
+                    UseSystemFontOnWindows="True" />
+            </On>
+
             <On Options="Linux">
                 <FluentTheme DensityStyle="Compact" />
             </On>
