--- a/tests/apps/AvaloniaTestApp/Views/MainWindow.axaml
+++ b/tests/apps/AvaloniaTestApp/Views/MainWindow.axaml
@@ -15,6 +15,6 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <AutoCompleteBox Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
 </Window>
