--- a/src/PlatynUI.Spy/Views/MainWindow.axaml
+++ b/src/PlatynUI.Spy/Views/MainWindow.axaml
@@ -66,7 +66,7 @@
 
             <Border Grid.Column="2" Padding="6">
                 <TextBox Name="SearchBox"
-                    MaxWidth="500"
+                    HorizontalAlignment="Stretch"
                     Watermark="Search..."
                     Text="{Binding SearchText, Mode=TwoWay}">
                     <TextBox.InnerRightContent>
