Added new feature to copy properties, resolves #17

--- a/src/PlatynUI.Spy/Views/MainWindow.axaml
+++ b/src/PlatynUI.Spy/Views/MainWindow.axaml
@@ -75,20 +75,17 @@
                                 FontFamily="{StaticResource SymbolThemeFontFamily}"
                                 Theme="{StaticResource TransparentButton}"
                                 Command="{Binding ClearSearch}"
-                                IsVisible="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=TextBox}, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                            />
+                                IsVisible="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=TextBox}, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
                             <Button Content="&#xE721;"
                                 FontFamily="{StaticResource SymbolThemeFontFamily}"
                                 Theme="{StaticResource TransparentButton}"
                                 Command="{Binding SearchAsync}"
-                                IsVisible="{Binding !InSearch}"
-                            />
+                                IsVisible="{Binding !InSearch}"/>
                             <Button Content="&#xE711;"
                                 FontFamily="{StaticResource SymbolThemeFontFamily}"
                                 Theme="{StaticResource TransparentButton}"
                                 Command="{Binding CancelSearch}"
-                                IsVisible="{Binding InSearch}"
-                            />
+                                IsVisible="{Binding InSearch}"/>
                         </StackPanel>
                     </TextBox.InnerRightContent>
                     <TextBox.Styles>
@@ -190,8 +187,10 @@
                                 <DataGridTemplateColumn Header="Value" Width="*" CanUserResize="True">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <TextBlock
-                                                Text="{Binding ., Converter={StaticResource ValueToString}, ConverterParameter=Value}"
+                                            <TextBox Text="{Binding Value}"
+                                                IsReadOnly="True"
+                                                BorderThickness="0"
+                                                Background="Transparent"
                                                 ToolTip.Tip="{Binding Value}"
                                                 VerticalAlignment="Center"
                                             />
