fix(spy): add application title for macox

--- a/src/PlatynUI.Spy/App.axaml
+++ b/src/PlatynUI.Spy/App.axaml
@@ -3,7 +3,8 @@
     x:Class="PlatynUI.Spy.App"
     xmlns:local="using:PlatynUI.Spy"
     xmlns:sty="using:FluentAvalonia.Styling"
-    RequestedThemeVariant="Default">
+    RequestedThemeVariant="Default"
+    Name="PlatynUI.Spy">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available
     options. -->
 
