--- a/tests/apps/AvaloniaTestApp/App.axaml
+++ b/tests/apps/AvaloniaTestApp/App.axaml
@@ -2,14 +2,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="AvaloniaTestApp.App"
              xmlns:local="using:AvaloniaTestApp"
-             RequestedThemeVariant="Default">
+             RequestedThemeVariant="Default"
+             Name="AvaloniaTestApp">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
-  
+
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+
 </Application>
