feat(Spy): introduce shortcut F6 to highlight the current element

--- a/src/PlatynUI.Spy/Views/MainWindow.axaml
+++ b/src/PlatynUI.Spy/Views/MainWindow.axaml
@@ -29,6 +29,8 @@
     <Window.KeyBindings>
         <KeyBinding Gesture="F5"
             Command="{Binding Refresh}" />
+        <KeyBinding Gesture="F6"
+            Command="{Binding Highlight}" />
         <KeyBinding Gesture="Escape"
             Command="{Binding CancelSearch}" />
     </Window.KeyBindings>
