feat: add a scrollbar to the avalonia app

--- a/tests/apps/AvaloniaTestApp/Views/MainWindow.axaml
+++ b/tests/apps/AvaloniaTestApp/Views/MainWindow.axaml
@@ -26,6 +26,8 @@
             VerticalAlignment="Center" />
         <TextBox x:Name="AutoCompleteEditBox" Text="{Binding Greeting}"
             HorizontalAlignment="Center" VerticalAlignment="Center" AutomationProperties.AutomationId="ATextBox" />
+        <ScrollBar 
+             HorizontalAlignment="Left" Visibility="Visible" VerticalAlignment="Center" Orientation="Horizontal" Width="100" />                
     </StackPanel>
 
 </Window>
