--- a/tests/apps/AvaloniaTestApp/Views/MainWindow.axaml
+++ b/tests/apps/AvaloniaTestApp/Views/MainWindow.axaml
@@ -26,7 +26,7 @@
             VerticalAlignment="Center" />
         <TextBox x:Name="AutoCompleteEditBox" Text="{Binding Greeting}"
             HorizontalAlignment="Center" VerticalAlignment="Center" AutomationProperties.AutomationId="ATextBox" />
-        <ScrollBar 
+        <ScrollBar AutomationProperties.AutomationId="MyScrollBar" Name="MyScrollBar"
              HorizontalAlignment="Left" Visibility="Visible" VerticalAlignment="Center" Orientation="Horizontal" Width="100" />                
     </StackPanel>
 
